회원가입 html 실습

--- a/week03/login.html
+++ b/week03/login.html
@@ -6,6 +6,21 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div>
+        <header>
+            <img src="./images/숙멋사로고 1.svg" />
+            <img src="./images/숙멋사로고명 1.svg" />
+        </header>
+        <form name = "login" method = "post">
+            <input type="text" name="username" placeholder="아이디" />
+            <input type="password" name="password" placeholder="비밀번호" />
+            <button type="submiss">로그인</button>
+        </form>
+        <aside>
+            <p> 아직 회원이 아니신가요? </p>
+            <a href="./signup.html" title="회원가입">회원가입하기</a>
+        </aside>
+    </div>
 </body>
 </html>
+
