--- a/week03/signup.html
+++ b/week03/signup.html
@@ -8,18 +8,28 @@
 <body>
     <div>
         <header>
-            <img src="./images/숙멋사로고 1.svg" />
-            <img src="./images/숙멋사로고명 1.svg" />
+            <img src="./images/숙멋사로고 1.svg"
+            <h2> 회원가입 안내 문구 :) </br> 아기사자님에 대해 알려주세요요 </h2>
         </header>
-        <form name = "login" method = "post">
-            <input type="text" name="username" placeholder="아이디" />
-            <input type="password" name="password" placeholder="비밀번호" />
-            <button type="submiss">로그인</button>
+        <form name="signup" method="post">
+            <section>
+                <span>이름</span>
+                <input name="first_name" type="text" placeholder="김사자" required/>
+            </section>
+            <section>
+                <span>아이디</span>
+                <input name="username" type="text" placeholder="아이디를 입력해 주세요." required/> 
+            </section>
+            <section>
+                <span>비밀번호</span>
+                <input name="password1" type="password" placeholder="비밀번호를 입력해 주세요." required/>
+            </section>
+            <section>
+                <span>비밀번호 확인</span>
+                <input name="password2" type="password" placeholder="비밀번호를 한 번 더 입력해 주세요." required/>
+            </section>
+            <button class="signup_btn" tupe="submit">회원가입하기기</button>
         </form>
-        <aside>
-            <p> 아직 회원이 아니신가요? </p>
-            <a href="./signup.html" title="회원가입">회원가입하기</a>
-        </aside>
     </div>
 </body>
 </html>
