--- a/week03/signup.html
+++ b/week03/signup.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="signup.css"/
 </head>
 <body>
     <div>
@@ -26,9 +27,9 @@
             </section>
             <section>
                 <span>비밀번호 확인</span>
-                <input name="password2" type="password" placeholder="비밀번호를 한 번 더 입력해 주세요." required/>
+                <input name="password2" type="password" placeholder="비밀번호 확인" required/>
             </section>
-            <button class="signup_btn" tupe="submit">회원가입하기기</button>
+            <button class="signup_btn" tupe="submit">회원가입하기</button>
         </form>
     </div>
 </body>
