회원가입 html 실습

--- a/week03/signup.html
+++ b/week03/signup.html
@@ -12,7 +12,7 @@
             <img src="./images/숙멋사로고 1.svg"
             <h2> 회원가입 안내 문구 :) </br> 아기사자님에 대해 알려주세요요 </h2>
         </header>
-        <form name="signup" method="post" onsubmit=”return checkPassword()”>
+        <form name="signup" method="post" onsubmit="return checkPassword()">
             <section class="signup_section">
                 <span>이름</span>
                 <input name="first_name" type="text" placeholder="김사자" required/>
