--- a/week03/login.html
+++ b/week03/login.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="login.css"/
+    <title>로그인 / Sookmyung LikeLion 13th</title>
+    <link rel="stylesheet" href="login.css"/>
 </head>
 <body>
     <div>
