--- a/week03/main.html
+++ b/week03/main.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="main.css" />
-    <title>🦁 메인</title>
+    <title>메인 / Sookmyung LikeLion 13th</title>
   </head>
+  
   <body>
     <header>
       <a href="main.html">
