--- a/week03/signup.html
+++ b/week03/signup.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="signup.css"/
+    <title>회원가입 / Sookmyung LikeLion 13th</title>
+    <link rel="stylesheet" href="signup.css"/>
 </head>
 <body>
     <div>
         <header>
-            <img src="./images/숙멋사로고 1.svg"
-            <h2> 회원가입 안내 문구 :) </br> 아기사자님에 대해 알려주세요요 </h2>
+            <img src="./images/숙멋사로고 1.svg">
+            <h2>안녕하세요 :) </br> 아기사자님에 대해 알려주세요.</h2>
         </header>
+
+
         <form name="signup" method="post" onsubmit="return checkPassword()">
             <section class="signup_section">
                 <span>이름</span>
@@ -29,9 +31,9 @@
                 <span>비밀번호 확인</span>
                 <input id="password2" name="password2" type="password" placeholder="비밀번호 확인" required/>
             </section>
-            <button class="signup_btn" tupe="submit">회원가입하기</button>
+            <button class="signup_btn" type="submit">회원가입하기</button>
         </form>
     </div>
-    <script src="signup.js"> </script>
+    <script src="signup.js"></script>
 </body>
 </html>
